--- a/index.html
+++ b/index.html
@@ -19,10 +19,58 @@
     <li>Hangout with my friends and teammates</li>
     <li>Working on my dads truck <a href="https://www.roughcountry.com/gallery/7-5-inch-lifted-2007-chevy-silverado-1500-4wd-85">(2007 silverado)</a></li>
 
-    <h2>Portfoilio</h2>
+    <h2>Bookmarks</h2>
+    <a href="https://unity.com/">Unity</a>
+    <a href="https://clever.com/in/tusd1/student/portal">Clever</a>
 
     <h2>Weekly Schedule</h2>
 
+
   </ul>
+
+  <table border="1">
+    <tr>
+      <th>Sunday</th>
+      <th>Monday</th>
+      <th>Tuesday</th>
+      <th>Wednsday</th>
+      <th>Thursday</th>
+      <th>Friday</th>
+      <th>Saturday</th>
+    </tr>
+    <tr>
+    <td>
+      <ul>
+        <li>Wake up at 9:00 or 10:00</li>
+        <li>Get in shower and brush my teeth at 9:30</li>
+        <li>Get ready for the day and eat breakfest with my family at 11:30 to 2:00</li>
+        <li>Finish up, and get ready to go fishing with my family at 2:30</li>
+        <li>Leave the lake and start to head home at 6:00</li>
+        <li>Get home and start getting ready for bet at 7:30 and eat at 7:00</li>
+        <li>Sleep at 8:00</li>
+      </ul>
+
+    </td>
+    <td>
+      <ul>
+        <li>Wake up at 6:00</li>
+        <li>Get ready to go to scholl at 6:45</li>
+        <li>Eat at 7:00</li>
+        <li>Dropo off my siblings and head my way to school at 7:25 </li>
+        <li>Get to school at 7:45</li>
+        <li>Leave school at 3:00</li>
+        <li>Get home at 4:00 and eat at 4:30</li>
+        <li>Go to practice at 6:35</li>
+        <li>Finish practice at 9:00 and head home</li>
+        <li>Get home and go to bed at 10:00</li>
+      </ul>
+    </td>
+
+    </ul>  
+      
+    </tr>
+
+
+  </table>
 </body>
 </html>
