--- a/index.html
+++ b/index.html
@@ -60,13 +60,47 @@
         <li>Get to school at 7:45</li>
         <li>Leave school at 3:00</li>
         <li>Get home at 4:00 and eat at 4:30</li>
-        <li>Go to practice at 6:35</li>
+        <li>Go to practice at 6:35 and start at 7:00</li>
         <li>Finish practice at 9:00 and head home</li>
         <li>Get home and go to bed at 10:00</li>
       </ul>
     </td>
+    <td>
+      <ul>
+        <li>Drop off my siblings and head my way to school at 7:25 </li>
+        <li>Get to school at 7:45</li>
+        <li>Leave school at 3:00</li>
+        <li>Get home at 4:00 and eat at 4:30</li>
+        <li>Go to practice at 6:35 and start at 7:00</li>
+        <li>Finish practice at 9:00 and head home</li>
+        <li>Get home and go to bed at 10:00</li>
+      </ul>
+      </td>
+      <td>
+        <ul>
+        <li>Drop off my siblings and head my way to school at 7:25 </li>
+        <li>Get to school at 7:45</li>
+        <li>Leave school at 3:00</li>
+        <li>Get home at 4:00 and eat at 4:30</li>
+        <li>Go to practice at 6:35 and start at 7:00</li>
+        <li>Finish practice at 9:00 and head home</li>
+        <li>Get home and go to bed at 10:00</li>
+        </ul>
+      </td> 
+      <td>
+        <ul>
+        <li>Drop off my siblings and head my way to school at 7:25 </li>
+        <li>Get to school at 7:45</li>
+        <li>Leave school at 3:00</li>
+        <li>Get home at 4:00 and eat at 4:30</li>
+        <li>Go to practice at 6:35 and start at 7:00</li>
+        <li>Finish practice at 9:00 and head home</li>
+        <li>Get home and go to bed at 10:00</li>
+        </ul>
+        </td>
+        <td></td>
 
-    </ul>  
+
       
     </tr>
 
