--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <img src="https://pixabay.com/photos/rouen-cathedral-cathedral-church-9787080/">
@@ -97,8 +98,7 @@
         <li>Finish practice at 9:00 and head home</li>
         <li>Get home and go to bed at 10:00</li>
         </ul>
-        </td>
-        <td></td>
+        </td><td>
 
 
       
